--- a/.github/workflows/modern.yml
+++ b/.github/workflows/modern.yml
@@ -1,31 +1,52 @@
-name: Modern App Lint
+name: release artifacts
 
 on:
   workflow_dispatch:
-               
-   
-
+    
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: yarn
+    - run: yarn build
+    - name: upload artifacts 
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-dist
+        path: modern/**
+        
+  release:
+    name: release 🐍 distributions 📦
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download artifact 
+        uses: actions/download-artifact@v3
         with:
-          node-version: 12.x
-      - name: Install dependencies
-        run: npm install    
-      - name: Test
-        run: npm test
-        env:
-          CI: true
-      - name: Generate build
-        run: npm run build
-      # Share artifact inside workflow
-      - name: Share artifact inside workflow
-        uses: actions/upload-artifact@v1
+          name: app-dist
+      - name: Test artifact 
+        run: ls -R
+      - name: make a github release
+        id: new-release
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          name: react-github-actions-build
-          path: build
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            *.gz
+            *.whl
