--- a/.github/workflows/modern.yml
+++ b/.github/workflows/modern.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: yarn
-    - run: yarn build
+    - run: npm
+    - run: npm run build
     - name: upload artifacts 
       uses: actions/upload-artifact@v3
       with:
